--- a/src/app/core/landing/sections/for-the-future/for-the-future.component.css
+++ b/src/app/core/landing/sections/for-the-future/for-the-future.component.css
@@ -19,6 +19,7 @@ h1 {
 img.mobile{
     display: block;
     margin: auto;
+    width: 100%;
 }
 img.desktop { 
     display: none;
